--- a/Portfolio.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Portfolio.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Portfolio.Domain.Models.Entities
+@using Portfolio.Domain.Business.BlogModule
+@using Portfolio.Domain.Business.UserModule
+@using Portfolio.Domain.Business.ProjectModule
